// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform crud does not generate arguments for get is search is not set 1`] = `
Object {
  "key": "test",
  "results": Array [
    Object {
      "arguments": Object {},
      "authentication": false,
      "method": "get",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": undefined,
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          "?",
        ],
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "post",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": undefined,
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "put",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": undefined,
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": Array [
          "number",
          "?",
        ],
        "myString": Array [
          "string",
          "?",
        ],
      },
      "authentication": false,
      "method": "patch",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": undefined,
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          Object {
            "$array": "string",
          },
        ],
      },
      "authentication": false,
      "method": "delete",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": undefined,
    },
  ],
  "type": "result",
}
`;

exports[`transform crud generates a custom arguments parameters for get  1`] = `
Object {
  "key": "test",
  "results": Array [
    Object {
      "arguments": Object {
        "customSearchField": "string",
      },
      "authentication": false,
      "method": "get",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": Object {
        "customSearchField": "string",
      },
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          "?",
        ],
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "post",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": Object {
        "customSearchField": "string",
      },
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "put",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": Object {
        "customSearchField": "string",
      },
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": Array [
          "number",
          "?",
        ],
        "myString": Array [
          "string",
          "?",
        ],
      },
      "authentication": false,
      "method": "patch",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": Object {
        "customSearchField": "string",
      },
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          Object {
            "$array": "string",
          },
        ],
      },
      "authentication": false,
      "method": "delete",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": Object {
        "customSearchField": "string",
      },
    },
  ],
  "type": "result",
}
`;

exports[`transform crud generates a full text search search option 1`] = `
Object {
  "key": "test",
  "results": Array [
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          Object {
            "$array": "string",
          },
          "?",
        ],
        "search": Array [
          "string",
          "?",
        ],
      },
      "authentication": false,
      "method": "get",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": "textSearch",
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          "?",
        ],
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "post",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "textSearch",
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "put",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "textSearch",
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": Array [
          "number",
          "?",
        ],
        "myString": Array [
          "string",
          "?",
        ],
      },
      "authentication": false,
      "method": "patch",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "textSearch",
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          Object {
            "$array": "string",
          },
        ],
      },
      "authentication": false,
      "method": "delete",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": "textSearch",
    },
  ],
  "type": "result",
}
`;

exports[`transform crud generates an id only get 1`] = `
Object {
  "key": "test",
  "results": Array [
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          Object {
            "$array": "string",
          },
          "?",
        ],
      },
      "authentication": false,
      "method": "get",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": "idOnly",
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          "?",
        ],
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "post",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "idOnly",
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "put",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "idOnly",
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": Array [
          "number",
          "?",
        ],
        "myString": Array [
          "string",
          "?",
        ],
      },
      "authentication": false,
      "method": "patch",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "idOnly",
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          Object {
            "$array": "string",
          },
        ],
      },
      "authentication": false,
      "method": "delete",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": "idOnly",
    },
  ],
  "type": "result",
}
`;

exports[`transform crud generates full, parametric search option 1`] = `
Object {
  "key": "test",
  "results": Array [
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          "?",
        ],
        "myNumber": Array [
          "number",
          "?",
        ],
        "myString": Array [
          "string",
          "?",
        ],
      },
      "authentication": false,
      "method": "get",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": "full",
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          "?",
        ],
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "post",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "full",
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "authentication": false,
      "method": "put",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "full",
    },
    Object {
      "arguments": Object {
        "id": "string",
        "myNumber": Array [
          "number",
          "?",
        ],
        "myString": Array [
          "string",
          "?",
        ],
      },
      "authentication": false,
      "method": "patch",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "id": "string",
        "myNumber": "number",
        "myString": "string",
      },
      "search": "full",
    },
    Object {
      "arguments": Object {
        "id": Array [
          "string",
          Object {
            "$array": "string",
          },
        ],
      },
      "authentication": false,
      "method": "delete",
      "name": "test",
      "preferredImplementation": undefined,
      "returns": Object {
        "$array": Object {
          "id": "string",
          "myNumber": "number",
          "myString": "string",
        },
      },
      "search": "full",
    },
  ],
  "type": "result",
}
`;
